# dojo

./: LICENSE  README.md
python/csp/: .gitignore  Makefile  README.md  pyproject.toml
python/csp/benchmarks/: bench_matching.py
python/csp/csp/: bfs.py  constraints.py  heuristics.py  inference.py  matching.py  model.py  scc.py  solver.py  types.py  utils.py
python/csp/examples/: test_basics.py  test_coloring.py  test_queens.py  test_rooks.py  test_sudoku.py
python/csp/tests/: test_ac3.py  test_alldiff.py  test_constraints.py  test_heuristics.py  test_matching.py  test_model.py
rust/initvec/: Cargo.toml  rust-toolchain.toml
rust/initvec/examples/: Cargo.toml  tokio_task_collect.rs
rust/initvec/src/: lib.rs
rust/redis-graph-axum/: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
rust/redis-graph-axum/src/: main.rs
rust/redis-pubsub/: .dockerignore  .envrc  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
rust/redis-pubsub/src/: main.rs
rust/redis-stream-wc/: .envrc  Cargo.toml  Makefile  README.md  docker-compose.yml
rust/redis-stream-wc/src/: client.rs  counter.rs  lib.rs
rust/tonic-grpc/: Cargo.toml  Makefile
rust/write-stack-buf/: Cargo.toml
rust/write-stack-buf/src/: lib.rs
rust/zmq-fan-in/: .dockerignore  .envrc  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
rust/zmq-fan-in/src/: msg.proto  producer.rs  sink.rs
