[tool.poetry]
name = "csp"
version = "0.1.0"
description = "CSP solver"
license = "MIT"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
readme = "README.md"
repository = "https://github.com/matyama/dojo"
keywords = ["CSP", "python", "algorithms"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
mypy = "*"
ruff = "*"
pytest = "*"
pytest-timeouts = "*"
scalene = "*"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
cache_dir = "/dev/null"
ignore_missing_imports = false
python_version = "3.12"

# equivalent to --strict except for the modifications above:
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pytest", "_pytest"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
