[package]
name = "redis-graph-axum"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
description = "D&D dungeon crawl planner using Axum and RedisGraph"
repository = "https://github.com/matyama/dojo"
license = "MIT"
edition = "2021"
publish = false

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.5"
config = "0.13"
deadpool-redis = { version = "0.9", features = ["rt_tokio_1", "serde"] }
derive-new = "0.5"
fastrand = "1.8"
itertools = "0.10"
petgraph = "0.6"
redis = { version = "0.22", features = ["tokio-comp", "connection-manager"] }
redis-graph = { version = "0.4", features = ["tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
