[package]
name = "redis-pubsub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pubsub"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
tokio = { version = "1.20.1", features = ["full"] }
redis = { version = "0.21.5", features = ["cluster", "tokio-comp"] }
prost = "0.11"

[build-dependencies]
prost-build = "0.11"

