[package]
name = "redis-stream-wc"
version = "0.1.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
description = "Simple word-count example using producer-consumer model on Redis Streams"
repository = "https://github.com/matyama/dojo"
license = "MIT"
edition = "2021"

[lib]
name = "redis_stream_wc"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "counter"
path = "src/counter.rs"

[dependencies]
derive-new = "0.5"
futures = "0.3"
tokio = { version = "1.20.1", features = ["full"] }
redis = { version = "0.21.5", features = ["tokio-comp", "streams", "connection-manager"] }
bb8-redis = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0"
itertools = "0.10"
