[package]
name = "zmq-fan-in"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "sink"
path = "src/sink.rs"

[dependencies]
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
tokio = { version = "1.20.1", features = ["full"] }
tmq = "0.3.2"
zmq = "0.9"

[features]
vendored-zmq = ["zmq/vendored"]
